version/0.12/_sources/api/solver/_autosummary/settings/modified_setting_options.rst.txt
:orphan:

.. _modified_setting_options:

modified_setting_options
========================

.. currentmodule:: ansys.fluent.core.solver.settings_231.modified_setting_options

.. autoclass:: modified_setting_options
    :show-inheritance:
    :undoc-members:
.. rubric:: Commands

==============================================   =====================================================================================================================

Command                                                                                                                                                        Summary

==============================================   =====================================================================================================================
:ref:`modified_setting <modified_setting>`           Specify which settings will be checked for non-default status for generating the Modified Settings Summary table.

:ref:`write_user_setting <write_user_setting>`                                                    Write the contents of the Modified Settings Summary table to a file.

==============================================   =====================================================================================================================

.. rubric:: Included in:

========================   ===================

Parent                                 Summary

========================   ===================
:ref:`report <report_1>`       'report' child.

========================   ===================

