version/0.27/_sources/api/solver/_autosummary/settings/modified_setting_options.rst.txt
:orphan:

.. _modified_setting_options:

modified_setting_options
========================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.modified_setting_options
    :show-inheritance:

.. rubric:: Methods

==============================================   =====================================================================================================================

Method                                                                                                                                                         Summary

==============================================   =====================================================================================================================
:ref:`modified_setting <modified_setting>`           Specify which settings will be checked for non-default status for generating the Modified Settings Summary table.

:ref:`write_user_setting <write_user_setting>`                                                    Write the contents of the Modified Settings Summary table to a file.

==============================================   =====================================================================================================================

.. rubric:: Included in:

==========================   ======================================================================================================================================================================================

Parent                                                                                                                                                                                                      Summary

==========================   ======================================================================================================================================================================================
:ref:`report_2 <report_2>`       Provides access to common settings to set up reports for your CFD simulation. Reports can be compiled for fluxes forces projected areas surface and volume integrals among others.

==========================   ======================================================================================================================================================================================

